--- a/package.json
+++ b/package.json
@@ -40,5 +40,7 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "eslint-config-airbnb": "^18.2.1"
+  }
 }
