--- a/.eslintrc
+++ b/.eslintrc
@@ -42,7 +42,8 @@
         },
         "ExportDeclaration": { "multiline": true, "minProperties": 3 }
       }
-    ]
+    ],
+    "jsx-a11y/anchor-is-valid": ["warn"]
   },
   "env": {
     "browser": true,
